# klusteri-website

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  package-lock.json  pyproject.toml  testi.txt
.github/ISSUE_TEMPLATE/: task.md  user-story.md
.github/workflows/: main.yml
backend/: .coveragerc  .pylintrc  Dockerfile  coverage.xml  db.sqlite3  db_connection.py  package.json  pyproject.toml  users
backend/backend/: settings.py  urls.py
backend/ilotalo/: admin.py  apps.py  config.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/ilotalo/migrations/: 0001_initial.py  0002_remove_user_email_remove_user_telegram_user_password.py  0003_user_email_user_telegram.py  0004_alter_user_role.py  0005_organization.py  0011_user_is_staff.py  (+37 more)
backend/scheduler/: scheduler.py
backend/tests/: test_api.py  test_models.py
docs/: YKV_instructions.md  cypress.md  database_instructions.md  github_projects.md
docs/examples/: siivousvuorot_example.json
docs/instructions/: cleaninglist_instructions.md  database_instructions.md  hallinnointi_instructions.md  varaukset_instructions.md
frontend/: .babelrc  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  cypress.config.js  index.html  nginx.conf  package-lock.json  package.json  start_nginx.sh  translations.json  vite.config.js
frontend/components/: CreateForm.jsx  Responsibilities.jsx  YkvForm.jsx
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/src/: App.css  App.jsx  axios.js  i18n.js  index.css  main.jsx  roles.js  translations.json
(+116 files in other folders)
